--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -20,11 +20,11 @@ doc-subtab: navbar
 {% endcapture %}
 
 {% capture navbar_burger_example %}
-<button class="button navbar-burger">
+<div class="navbar-burger">
   <span></span>
   <span></span>
   <span></span>
-</button>
+</div>
 {% endcapture %}
 
 {% capture navbar_brand_items_example %}
@@ -34,11 +34,11 @@ doc-subtab: navbar
       <img src="{{ site.url }}/images/bulma-logo.png" alt="{{ site.title }}" width="112" height="28">
     </a>
 
-    <button class="button navbar-burger">
+    <div class="navbar-burger">
       <span></span>
       <span></span>
       <span></span>
-    </button>
+    </div>
   </div>
 </nav>
 {% endcapture %}
@@ -478,11 +478,11 @@ doc-subtab: navbar
 {% endcapture %}
 
 {% capture navbar_js_html %}
-<button class="button navbar-burger" data-target="navMenu">
+<div class="navbar-burger" data-target="navMenu">
   <span></span>
   <span></span>
   <span></span>
-</button>
+</div>
 
 <div class="navbar-menu" id="navMenu">
   <!-- navbar-start, navbar-end... -->
