add is-expanded modifier

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -239,6 +239,8 @@ $button-static-border-color: $grey-lighter !default
         z-index: 3
         &:hover
           z-index: 4
+      &.is-expanded
+        flex-grow: 1
   &.is-centered
     justify-content: center
   &.is-right
