add breakpoint based column gaps

--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -475,3 +475,39 @@ $column-gap: 0.75rem !default
     @for $i from 0 through 8
       &.is-#{$i}
         --columnGap: #{$i * 0.25rem}
+    +mobile
+      @for $i from 0 through 8
+        &.is-#{$i}-mobile
+          --columnGap: #{$i * 0.25rem}
+    +tablet
+      @for $i from 0 through 8
+        &.is-#{$i}-tablet
+          --columnGap: #{$i * 0.25rem}
+    +tablet-only
+      @for $i from 0 through 8
+        &.is-#{$i}-tablet-only
+          --columnGap: #{$i * 0.25rem}
+    +touch
+      @for $i from 0 through 8
+        &.is-#{$i}-touch
+          --columnGap: #{$i * 0.25rem}
+    +desktop
+      @for $i from 0 through 8
+        &.is-#{$i}-desktop
+          --columnGap: #{$i * 0.25rem}
+    +desktop-only
+      @for $i from 0 through 8
+        &.is-#{$i}-desktop-only
+          --columnGap: #{$i * 0.25rem}
+    +widescreen
+      @for $i from 0 through 8
+        &.is-#{$i}-widescreen
+          --columnGap: #{$i * 0.25rem}
+    +widescreen-only
+      @for $i from 0 through 8
+        &.is-#{$i}-widescreen-only
+          --columnGap: #{$i * 0.25rem}
+    +fullhd
+      @for $i from 0 through 8
+        &.is-#{$i}-fullhd
+          --columnGap: #{$i * 0.25rem}
