fieldset disabled styles

--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -29,6 +29,7 @@ $control-padding-horizontal: calc(0.625em - 1px) !default
   &.is-active
     outline: none
   &[disabled]
+  fieldset[disabled] &
     cursor: not-allowed
 
 // The controls sizes use mixins so they can be used at different breakpoints
