--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -57,6 +57,7 @@ $help-size: $size-small !default
     border-color: $input-focus-border-color
     box-shadow: $input-focus-box-shadow-size $input-focus-box-shadow-color
   &[disabled]
+  fieldset[disabled] &
     background-color: $input-disabled-background-color
     border-color: $input-disabled-border-color
     box-shadow: none
@@ -135,6 +136,7 @@ $help-size: $size-small !default
   &:hover
     color: $input-hover-color
   &[disabled]
+  fieldset[disabled] &  
     color: $input-disabled-color
     cursor: not-allowed
 
@@ -169,6 +171,7 @@ $help-size: $size-small !default
     &::-ms-expand
       display: none
     &[disabled]:hover
+    fieldset[disabled] &:hover
       border-color: $input-disabled-border-color
     &:not([multiple])
       padding-right: 2.5em
