1698 To make 2 select inside 2 horizontal forms with the same width

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -531,6 +531,7 @@ $help-size: $size-small !default
       flex-shrink: 1
       &:not(.is-narrow)
         flex-grow: 1
+        width: 50%
       &:not(:last-child)
         margin-right: 0.75rem
 
