1696 Form rendering is off within a `summary` section

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -539,6 +539,7 @@ $help-size: $size-small !default
   font-size: $size-normal
   position: relative
   text-align: left
+  display: flex
   // Modifiers
   // DEPRECATED
   &.has-icon
