--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -64,6 +64,7 @@ $navbar-divider-background-color: $border !default
           &:hover,
           &.is-active
             background-color: darken($color, 5%)
+            border-bottom-color: darken($color, 25%)
             color: $color-invert
         .navbar-link
           &::after
@@ -109,12 +110,10 @@ $navbar-divider-background-color: $border !default
   &.is-fixed-top
     top: 0
 
-html.has-navbar-fixed-top,
-body.has-navbar-fixed-top
+html.has-navbar-fixed-top
   padding-top: $navbar-height
 
-html.has-navbar-fixed-bottom,
-body.has-navbar-fixed-bottom
+html.has-navbar-fixed-bottom
   padding-bottom: $navbar-height
 
 .navbar-brand,
