Change display: flex to block

--- a/sass/components/list.sass
+++ b/sass/components/list.sass
@@ -18,7 +18,7 @@ $list-item-hover-color: $background !default
 
 .list-item
   color: $list-item-color
-  display: flex
+  display: block
   padding: 0.5em 1em
   &.is-active
     background-color: $list-item-active-color
