--- a/sass/components/list.sass
+++ b/sass/components/list.sass
@@ -1,4 +1,3 @@
-$list-border: 1px solid $border !default
 $list-background-color: $white !default
 $list-radius: $radius !default
 
@@ -10,7 +9,7 @@ $list-item-hover-color: $background !default
 
 .list
   background-color: $list-background-color
-  border: $list-border
+  box-shadow: $card-shadow
   border-radius: $list-radius
   &.is-hoverable > .list-item:hover:not(.is-active)
     background-color: $list-item-hover-color
@@ -19,7 +18,7 @@ $list-item-hover-color: $background !default
 .list-item
   color: $list-item-color
   display: block
-  padding: 0.5em 1em
+  padding: 0.375rem 0.75rem
   &.is-active
     background-color: $list-item-active-color
     color: $list-item-active-text-color
