Change variable names and padding

--- a/sass/components/list.sass
+++ b/sass/components/list.sass
@@ -3,9 +3,9 @@ $list-radius: $radius !default
 
 $list-item-border: 1px solid $border !default
 $list-item-color: $text !default
-$list-item-active-color: $primary !default
-$list-item-active-text-color: $white !default
-$list-item-hover-color: $background !default
+$list-item-active-background-color: $link !default
+$list-item-active-color: $link-invert !default
+$list-item-hover-background-color: $background !default
 
 .list
   background-color: $list-background-color
@@ -18,9 +18,9 @@ $list-item-hover-color: $background !default
 .list-item
   color: $list-item-color
   display: block
-  padding: 0.375rem 0.75rem
+  padding: 0.5em 1em
   &.is-active
-    background-color: $list-item-active-color
-    color: $list-item-active-text-color
+    background-color: $list-item-active-background-color
+    color: $list-item-active-color
   &:not(:last-child)
     border-bottom: $list-item-border
