Fix undefined variable bug

--- a/sass/components/list.sass
+++ b/sass/components/list.sass
@@ -12,7 +12,7 @@ $list-item-hover-background-color: $background !default
   box-shadow: $card-shadow
   border-radius: $list-radius
   &.is-hoverable > .list-item:hover:not(.is-active)
-    background-color: $list-item-hover-color
+    background-color: $list-item-hover-background-color
     cursor: pointer
 
 .list-item
