Change reference variable to local variable

--- a/sass/components/list.sass
+++ b/sass/components/list.sass
@@ -1,4 +1,5 @@
 $list-background-color: $white !default
+$list-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default
 $list-radius: $radius !default
 
 $list-item-border: 1px solid $border !default
@@ -9,7 +10,7 @@ $list-item-hover-background-color: $background !default
 
 .list
   background-color: $list-background-color
-  box-shadow: $card-shadow
+  box-shadow: $list-shadow
   border-radius: $list-radius
   &.is-hoverable > .list-item:hover:not(.is-active)
     background-color: $list-item-hover-background-color
