fix icon floating out of input
Corrects the problem of the .has-icon-left / .has-icon-right fields floating out of the input area when a .help element is floated to the right of a preceding input

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -543,6 +543,7 @@ $help-size: $size-small !default
   font-size: $size-normal
   position: relative
   text-align: left
+  clear: both //fixes the icon floating out of the input when help text is floated right
   // Modifiers
   // DEPRECATED
   &.has-icon
