--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -29,7 +29,7 @@ route: documentation
       <nav class="tabs is-boxed">
         <ul>
           <li {% if page.doc-tab == 'overview' %}class="is-active"{% endif %}>
-            <a href="{{ site.documentation }}">Overview</a>
+            <a href="{{ site.data.meta.documentation }}">Overview</a>
           </li>
           <li {% if page.doc-tab == 'modifiers' %}class="is-active"{% endif %}>
             <a href="{{ site.url }}/documentation/modifiers/syntax">Modifiers</a>
