--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -13474,4 +13474,95 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   width: 200px;
 }
 
+.bd-book-banner {
+  background-color: white;
+  position: relative;
+}
+
+.bd-book-pattern {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-image: url("/images/hab/lightpaperfibers_@2X.png");
+  background-repeat: repeat;
+  background-size: 250px 150px;
+}
+
+.bd-book-pattern::after {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: rgba(255, 237, 215, 0.1);
+  content: "";
+  display: block;
+}
+
+.bd-book-header {
+  position: relative;
+}
+
+.bd-book-cover img {
+  display: block;
+}
+
+.bd-book-content {
+  background-color: white;
+  -webkit-box-shadow: 0 40px 40px -20px rgba(10, 10, 10, 0.1);
+          box-shadow: 0 40px 40px -20px rgba(10, 10, 10, 0.1);
+  max-width: 520px;
+  padding: 3rem;
+}
+
+.bd-book-description {
+  max-width: 340px;
+}
+
+.bd-book-tags {
+  margin-bottom: 3rem;
+}
+
+.bd-book-tags .tags .tag {
+  margin-right: 1px;
+}
+
+.bd-book-columns {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1080px;
+}
+
+@media screen and (max-width: 768px) {
+  .bd-book-columns {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 769px), print {
+  .bd-book-columns {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .bd-book-header .tag {
+    position: absolute;
+    right: calc(100% + 1.25rem);
+    top: 0.5rem;
+  }
+}
+
 /*# sourceMappingURL=bulma-docs.css.map */
