--- a/docs/_includes/book-banner.html
+++ b/docs/_includes/book-banner.html
@@ -7,7 +7,7 @@
           {% include book-cover.html %}
         </div>
         <div class="bd-book-column bd-is-content">
-          {% include book-content.html %}
+          {% include book-content.html show_cover=false %}
         </div>
       </div>
     </div>
