--- a/docs/_includes/book-content.html
+++ b/docs/_includes/book-content.html
@@ -4,6 +4,13 @@
     <h3 class="title">The official Bulma book! 😲</h3>
     <p class="subtitle is-6 has-text-grey">by Jeremy Thomas, creator of Bulma, Oleksii Potiekhin,<br>Mikko Lauhakari, Aslam Shah and David Berning</p>
   </header>
+
+  {% if include.show_cover %}
+    <div class="bd-book-inline-cover">
+      {% include book-cover.html %}
+    </div>
+  {% endif %}
+
   <div class="block bd-book-description is-size-5">
     <p>A <strong>step-by-step guide</strong> that teaches you how to build a <strong>web interface from scratch</strong> using Bulma.</p>
   </div>
