--- a/docs/_includes/book-content.html
+++ b/docs/_includes/book-content.html
@@ -17,7 +17,7 @@
   <div class="bd-book-tags">
     <div class="field is-grouped is-grouped-multiline">
       <div class="control">
-        <span class="tag is-white has-text-grey is-paddingless">Formats included:</span>
+        <span class="tag is-white has-text-grey is-paddingless">Formats available:</span>
       </div>
       <div class="control">
         <div class="tags has-addons">
@@ -26,21 +26,35 @@
           <strong class="tag has-text-success">Mobi</strong>
         </div>
       </div>
+      <div class="control">
+        <span class="tag is-white has-text-grey is-paddingless">or</span>
+      </div>
+      <div class="control">
+        <div class="tags has-addons">
+          <strong class="tag has-text-orange">Kindle</strong>
+        </div>
+      </div>
     </div>
   </div>
   <div class="block bd-book-buttons">
     <div class="buttons">
-      <a class="button is-danger is-large" href="{{ site.data.meta.book_url }}" target="_blank" rel="nofollow">
+      <a class="button bd-is-bleeding is-large" href="{{ site.data.meta.book_url }}" target="_blank" rel="nofollow">
         <span>
-          <strong>Buy</strong> the book
+          <em>PDF + Epub + Mobi</em>
+          <strong>Buy</strong> from <img src="/images/book/bleedingedge-type.png">
         </span>
       </a>
-      <a class="button is-light is-large" href="{{ site.data.meta.book_sample }}" target="_blank" rel="nofollow">
+      <a class="button bd-is-amazon is-large" href="{{ site.data.meta.book_amazon }}" target="_blank" rel="nofollow">
         <span>
-          <span>Get</span>
-          <strong>free sample</strong>
+          <em>Kindle version</em>
+          <strong>Buy</strong> from <img src="/images/book/amazon-logo.png">
         </span>
       </a>
+    </div>
+    <div class="bd-book-sample">
+      Or <a href="{{ site.data.meta.book_sample }}" target="_blank" rel="nofollow">
+        download a free sample
+      </a>!
     </div>
   </div>
 </div>
