--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -6,6 +6,9 @@ $twitter: #55acee
 $patreon: #f96854
 $patreon-blue: #052d49
 $fortyfour: #5f45bb
+$amazon: #ffd863
+$bleeding-green: #ABF47C
+$bleeding-red: #CA1F26
 
 @import "../bulma"
 @import "./_sass/highlight"
