--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -11717,6 +11717,10 @@ svg {
   }
 }
 
+.has-text-orange {
+  color: #ff470f !important;
+}
+
 .bd-article-image {
   background-color: #00d1b2;
   display: block;
@@ -13589,11 +13593,57 @@ html.route-index .hero.is-primary a.column:hover .title strong {
 }
 
 .bd-book-tags {
-  margin-bottom: 3rem;
+  margin-bottom: 1.5rem;
 }
 
 .bd-book-tags .tags .tag {
   margin-right: 1px;
+}
+
+.bd-book-buttons .button {
+  height: auto;
+  padding-bottom: calc(1em - 1px);
+  padding-top: calc(0.5em - 1px);
+}
+
+.bd-book-buttons .button > span {
+  font-size: 0.875em;
+}
+
+.bd-book-buttons .button > span > em {
+  display: block;
+  font-size: 0.5em;
+  font-style: normal;
+  line-height: 1em;
+  margin-bottom: 0.5em;
+  opacity: 0.5;
+}
+
+.bd-book-buttons .button img {
+  display: block;
+  max-height: 24px;
+}
+
+.bd-book-buttons .button.bd-is-bleeding {
+  background-color: #ABF47C;
+  border-color: transparent;
+}
+
+.bd-book-buttons .button.bd-is-bleeding:hover {
+  background-color: #9cf264;
+}
+
+.bd-book-buttons .button.bd-is-amazon {
+  background-color: #ffd863;
+  border-color: transparent;
+}
+
+.bd-book-buttons .button.bd-is-amazon:hover {
+  background-color: #ffd24a;
+}
+
+.bd-book-buttons .button.bd-is-amazon img {
+  margin-bottom: -11px;
 }
 
 .bd-book-columns {
@@ -13665,6 +13715,13 @@ html.route-index .hero.is-primary a.column:hover .title strong {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  .bd-book-buttons .button {
+    width: 100%;
+  }
+  .bd-book-buttons .button:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
   .bd-book-modal .bd-book-content {
     padding: 2rem;
   }
@@ -13682,6 +13739,9 @@ html.route-index .hero.is-primary a.column:hover .title strong {
     position: absolute;
     right: calc(100% + 1.25rem);
     top: 0.5rem;
+  }
+  .bd-book-buttons .button {
+    width: calc(50% - 0.5rem);
   }
   .bd-book-modal .modal-content {
     width: 960px;
